[package]
name = "is_42"
version = "0.1.0"
edition = "2021"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT"
repository="https://github.com/BigNtertainment/is-42"
readme="README.md"
keywords=["number", "42", "equality"]
categories=["alghorithms"]
include = ["src/", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
