[package]
name = "is_42"
version = "0.1.2"
edition = "2021"
description = "Simple, blazingly fast way of checking if a variable is equal to 42."
license = "MIT"
repository="https://github.com/BigNtertainment/is-42"
readme="README.md"
keywords=["number", "42", "equality"]
categories=["algorithms"]
include = ["src/", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
